pamc/src/tests/sample_code/should_fail/multi_file/bind/let_value_priv/src/mod.ph
mod nat;
let _1 = nat.Nat.S(nat.Nat.O);
